...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/botonregistrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
...
                android:background="@color/colorPrimaryDark"
                android:text="@string/registrar"
                android:textColor="#FFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkboxregistrar" />

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
...
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/acepto_t_rminos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/institucionregistrar" />

            <EditText
                android:id="@+id/dniregistrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
...
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:maxLength="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tipodni" />

            <EditText
                android:id="@+id/nombreregistrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dniregistrar" />

            <EditText
                android:id="@+id/apellidoregistrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nombreregistrar" />

            <EditText
                android:id="@+id/correoregistrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
...
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sexoregistrar" />

            <EditText
                android:id="@+id/passregistrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/correoregistrar" />

            <EditText
                android:id="@+id/verifpassregistrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passregistrar" />

            <EditText
                android:id="@+id/telefonoregistrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
...
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:maxLength="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerpais" />

            <Spinner
                android:id="@+id/tipodni"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
...
