...
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mateus Andrés</string>
    <string name="nav_header_subtitle">mateus@mnm.team</string>
    <string name="nav_header_desc">mnm.team/mateus</string>
    <string name="seleccione_su_nueva_ciudad">Seleccione su nueva ciudad</string>
    <string name="ingresar_al_congreso">Ingresar al congreso</string>
    <string name="logo_del_congreso">Logo del congreso</string>
    <string name="seleccione_un_congreso">Seleccione un congreso:</string>
    <string name="congreso">CONGRESO VIRTUAL</string>
    <string name="comenzar">Comenzar</string>
    <string name="presionando_comenzar">Presionando \'Comenzar\', acepta los términos y condiciones de uso de la aplicación Online Congress</string>
    <string name="logo_de_online_congress">Logo de Online Congress</string>
    <string name="_2019_mnm_gridsoa">©2019, MNM - GRIDSOA</string>
    <string name="mateus">Mateus</string>
    <string name="asiste_a">Asiste a múltiples congresos virutales con:</string>
    <string name="participa">¡Participa ahora!</string>
    <string name="software_para_congresos">Software para congresos virtuales de investigación.</string>
    <string name="restablecer_contrase_a">Restablecer contraseña</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="correo_electr_nico_de_su_cuenta">Correo electrónico de su cuenta</string>
    <string name="ha_olvidado_su_contrase_a">¿Ha olvidado su contraseña? Ingrese su dirección de correo electrónico. Recibirá un mail para establecer una contraseña nueva.</string>
    <string name="recuperar_cuenta_asistente">RECUPERAR CUENTA (Asistente)</string>
    <string name="olvid_su_contrase_a">¿Olvidó su contraseña?</string>
    <string name="reg_strese_aqu">REGÍSTRESE AQUÍ</string>
    <string name="contrase_a">Contraseña</string>
    <string name="id_o_correo_electr_nico">ID o Correo electrónico</string>
    <string name="iniciar_sesi_n_asistente">INICIAR SESIÓN (Asistente)</string>
    <string name="mateus_byuwur_mnm">Mateus [byUwUr] - MNM</string>
    <string name="info">INFO.</string>
    <string name="foro">FORO</string>
    <string name="autor">AUTOR(ES)</string>
    <string name="registrarse_asistente">REGISTRARSE (Asistente)</string>
    <string name="registrar">Registrar</string>
    <string name="acepto_t_rminos">Acepto Términos y Condiciones para registrarme como asistente de Online Congress</string>
    <string name="documento_de_identidad">Documento de identidad</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="verificar_contrase_a">Verificar contraseña</string>
    <string name="c_d_pa_s_tel_fono">(+cód. país) Teléfono</string>
...
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="asterisc">**********</string>
    <string name="seguridad">Seguridad</string>
    <string name="tel_fono_actual">Teléfono actual</string>
    <string name="tel_fono">Teléfono</string>
    <string name="instituci_n">Institución</string>
    <string name="congresos">Congreso</string>
    <string name="correo_electr_nico_actual">Correo electrónico actual</string>
    <string name="correo_correo_com">correo@correo.com</string>
    <string name="correo">Correo</string>
    <string name="identidad">Identidad</string>
    <string name="n_identidad">Número de identidad</string>
    <string name="enviar_comentario">Enviar comentario</string>
...
